<resources>
    <string name="app_name">MaKaLa</string>
    <string name="content_description">gambar</string>
    <string name="title_login">MASUK</string>
    <string name="et_hint_email_id">Email atau ID</string>
    <string name="et_hint_password">Kata Sandi</string>
    <string name="lbl_forgot_password">Lupa Kata Sandi ?</string>
    <string name="btn_lbl_login">Masuk</string>
    <string name="don_t_have_an_account">Belum punya akun ?</string>
    <string name="register"><u>Daftar</u> </string>

    <string name="create_an_account">BUAT AKUN BARU</string>

    <string name="hint_last_name">Nama Belakang</string>
    <string name="hint_first_name">Nama Depan</string>
    <string name="et_hint_confirm_password">Konfirmasi Kata Sandi</string>

    <string name="i_agree_to_the_terms_and_condition">Saya menyetujui <u>Syarat dan Ketentuan</u> </string>
    <string name="btn_lbl_register">Daftar</string>

    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>

    <string name="err_msg_enter_first_name">Harap masukkan nama depan.</string>
    <string name="err_msg_enter_last_name">Harap masukkan nama belakang.</string>
    <string name="err_msg_enter_email">Harap masukkan Email.</string>
    <string name="err_msg_enter_password">Harap masukkan Password.</string>
    <string name="err_msg_enter_confirm_password">Harap masukkan Password Konfirmasi.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password dan Password Konfirmasi tidak sama.</string>
    <string name="err_msg_agree_terms_and_condition">Harap setujui Syarat dan Ketentuan.</string>
    <string name="registry_success">Terimakasih sudah mendaftar.</string>

    <string name="please_wait">Mohon Tunggu&#8230;</string>

    <string name="title_forgot_password">LUPA KATA SANDI ?</string>
    <string name="forgot_password_description">Masukkan nama pengguna anda atau alamat e-mail anda kami akan mengirimkan sebuah email untuk mengatur ulang kata sandi anda</string>
    <string name="btn_lbl_submit">Kirimkan</string>

    <string name="email_sent_succses">Email berhasil di kirim untuk mengatur ulang kata sandi anda! \"</string>
    <string name="register_success">Pendaftaran anda berhasil.</string>

    <string name="tittle_complete_profile">PROFIL LENGKAP</string>
    <string name="tittle_edit_profile">EDIT PROFIL</string>
    <string name="et_hint_mobile_number">Nomor HP</string>
    <string name="rb_lbl_male">PRIA</string>
    <string name="rb_lbl_female">WANITA</string>
    <string name="rb_lbl_save">Simpan</string>

    <string name="read_storage_permission_danied">Oops, Anda baru saja menolak izin untuk penyimpanan. Anda dapat mengizinkannya dari pengaturan.</string>
    <string name="image_selection_failed">Gagal memilih gambar!</string>
    <string name="err_msg_enter_mobile_number">Harap memasukkan nomor Handphone.</string>
    <string name="msg_profil_update_success">Profil anda berhasil di perbarui.</string>
    <!--<string name="title_activity_dashboard">MainActivity</string> -->
    <string name="title_beranda">Beranda</string>
    <string name="title_beli_jajan">Beli</string>
    <string name="title_jual_jajan">Jual</string>

    <string name="please_click_back_again_to_exit">Ketuk dua kali untuk kembail</string>
    <string name="action_settings">Pengaturan</string>

    <string name="tittle_settings">Pengaturan</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Alamat</string>
    <string name="btn_lbl_logout">KELUAR</string>


</resources>