<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.aplikasi.makala.ui.fragment.DashboardFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/products_home" />

    <fragment
        android:id="@+id/navigation_beli_jajan"
        android:name="com.aplikasi.makala.ui.fragment.OrdersFragment"
        android:label="@string/title_beli_jajan"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_jual_jajan"
        android:name="com.aplikasi.makala.ui.fragment.ProductsFragment"
        android:label="@string/title_jual_jajan"
        tools:layout="@layout/fragment_orders" />
</navigation>